updated index.html with a new line

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
 <body>
     <h1>Github</h1>
     <p>my name is hamad raza</p>
+    <p>i am from multan</p>
+    <p>a new line is added</p>
 </body>
 </html>
