added image to hello world

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Github</h1>
+    <div><img src="/myproject/Hamee.jpg" alt="hello hamee" style="width: 100%;"></div>
     <p>my name is hamad raza</p>
     <p>i am from multan</p>
     <p>a new line is added</p>
