updated index.html with a new line

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <h1>Github</h1>
     <p>my name is hamad raza</p>
     <p>i am from multan</p>
-    <p>a new line is added</p>
+    <p>i am merging my files</p>
 </body>
 </html>
