added image to hello-world

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <p>my name is hamad raza</p>
     <p>i am from multan</p>
     <p>a new line is added</p>
+    <div><img src="/myproject/Hamee 2.jpg" alt="hello Github" style="width: 50%;"></div>
 </body>
 </html>
